--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>ch.bbw</groupId>
+        <artifactId>M324_GitSubmodules</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>ch.bbw.et</groupId>
     <artifactId>M324_Submodule1</artifactId>
     <version>1.0-SNAPSHOT</version>
